# Memscan

./: .gitignore  Cargo.toml  INSTALL.md  README.md  USAGE.md  dcs.txt  logo.txt  run_memscan.sh  test_target  test_target.c
src/: lib.rs  main.rs  memory.rs  memory_optimization.rs  memory_utils.rs  monitor.rs  process.rs  scanner.rs  utils.rs
