[package]
name = "memscan"
version = "0.1.0"
edition = "2024"
authors = ["Danielscos <subtodanielscos10@gmail.com>"]
description = "High-performance, cross-platform memory scanner"

[dependencies]
fltk = "1"
lazy_static = "1"
thiserror = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "memoryapi",
    "handleapi",
    "tlhelp32",
    "psapi",
    "winnt",
    "errhandlingapi",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["process", "signal"] }

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.15"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
